--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.17.0",
     "axios": "^1.7.3",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "pagueaqui": "file:",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
